force-app/main/default/objects/Resouce_Project__c/fields/Required_Hours__c.field-meta.xml
<CustomField>
    <fullName>Required_Hours__c</fullName>
    <label>Required Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>