force-app/main/default/objects/Resouce_Project__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Resources_Projects</relationshipLabel>
    <relationshipName>Resources_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>